update .gitignore and comments ine Notebook

--- a/03_Walmart_Sales.ipynb
+++ b/03_Walmart_Sales.ipynb
@@ -6612,7 +6612,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part II: baseline model: linear regression on ```weekly_sales```"
+    "## Part II: linear regression to predict ```weekly_sales```"
    ]
   },
   {
@@ -7619,7 +7619,7 @@
     "## <ins>Conclusion and perspectives</ins>\n",
     "\n",
     "<font size = 5>\n",
-    "- Regularization does not improve Linear regression model is not improved by much <br>\n",
+    "- Regularization does not improve Linear regression model by much <br>\n",
     "- Features with the most importance are the stores themselves <br>\n",
     "- Could be interesting to cluster stores per weekly sales and see if different features have different importance depending on the store's income"
    ]
